Chore: Replace `Collections.emptyList()` with `List.of()` for simplicity in `parameterValues` method